Changes in structure.

--- a/playground/codekit-config.json
+++ b/playground/codekit-config.json
@@ -30,6 +30,17 @@
       "outputAbbreviatedPath" : "\/js\/atk-helpers-min-min.js",
       "fileType" : 64
     },
+    "\/temp\/logo-agile55.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/temp\/logo-agile55.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/temp\/logo-agile55.png",
+      "initialSize" : 3629,
+      "fileType" : 8192
+    },
     "\/temp\/tomatoes.jpg" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -52,32 +63,12 @@
       "initialSize" : 1475,
       "fileType" : 8192
     },
-    "\/temp\/logo-agile55.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/temp\/logo-agile55.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/temp\/logo-agile55.png",
-      "initialSize" : 3629,
-      "fileType" : 8192
-    },
     "\/layout.html" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
       "inputAbbreviatedPath" : "\/layout.html",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2048
-    },
-    "\/test.html" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/test.html",
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 2048
     },
@@ -91,6 +82,15 @@
       "syntaxCheckerStyle" : 1,
       "outputAbbreviatedPath" : "\/js\/demo-min.js",
       "fileType" : 64
+    },
+    "\/test.html" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/test.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
     },
     "\/temp\/stars.jpg" : {
       "ignoreWasSetByUser" : 0,
@@ -187,6 +187,23 @@
       "initialSize" : 28762,
       "fileType" : 4096
     },
+    "\/css\/playground.less" : {
+      "ieCompatibility" : 1,
+      "inputAbbreviatedPath" : "\/css\/playground.less",
+      "outputAbbreviatedPath" : "\/css\/playground.css",
+      "outputPathIsSetByUser" : 0,
+      "strictUnits" : 0,
+      "relativeURLS" : 0,
+      "ignore" : 1,
+      "strictImports" : 0,
+      "ignoreWasSetByUser" : 0,
+      "shouldRunBless" : 0,
+      "hidden" : 0,
+      "strictMath" : 0,
+      "outputStyle" : 1,
+      "fileType" : 1,
+      "debugStyle" : 2
+    },
     "\/apple-touch-icon.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -231,15 +248,6 @@
       "initialSize" : 66206,
       "fileType" : 4096
     },
-    "\/index.html" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/index.html",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2048
-    },
     "\/temp\/apples.jpg" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -251,27 +259,14 @@
       "initialSize" : 22663,
       "fileType" : 4096
     },
-    "\/js\/jquery-ui-1.10.3.custom.min.js" : {
+    "\/index.html" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/jquery-ui-1.10.3.custom.min.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/jquery-ui-1.10.3.custom.min-min.js",
-      "fileType" : 64
-    },
-    "\/temp\/bananas.jpg" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/temp\/bananas.jpg",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/temp\/bananas.jpg",
-      "initialSize" : 21036,
-      "fileType" : 4096
+      "inputAbbreviatedPath" : "\/index.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
     },
     "\/js\/jquery-1.10.2.min.js" : {
       "ignoreWasSetByUser" : 0,
@@ -284,6 +279,17 @@
       "outputAbbreviatedPath" : "\/js\/jquery-1.10.2.min-min.js",
       "fileType" : 64
     },
+    "\/js\/jquery-ui-1.10.3.custom.min.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/js\/jquery-ui-1.10.3.custom.min.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/js\/jquery-ui-1.10.3.custom.min-min.js",
+      "fileType" : 64
+    },
     "\/js\/atk-helpers.js" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -294,6 +300,17 @@
       "syntaxCheckerStyle" : 1,
       "outputAbbreviatedPath" : "\/js\/atk-helpers-min.js",
       "fileType" : 64
+    },
+    "\/temp\/bananas.jpg" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/temp\/bananas.jpg",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/temp\/bananas.jpg",
+      "initialSize" : 21036,
+      "fileType" : 4096
     },
     "\/temp\/fruits.jpg" : {
       "ignoreWasSetByUser" : 0,
