--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
     "source": {
         "url": "git@github.com:atk4/agiletoolkit-css.git",
         "type": "git",
-        "reference": "origin/master"
+        "reference": "origin/addon_setup"
     }
 }
